# tauri-git-streaks

./: .gitignore  README.md  justfile  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/github/: fetcher.rs  mod.rs  parser.rs
src/components/heatmap/: Heatmap.tsx  HeatmapTooltip.tsx
src/components/stats/: StatCard.tsx
src/components/user/: UserHeader.tsx
src/hooks/: useContributions.ts  useSettings.ts
src/lib/: api.ts  types.ts  utils.ts
