[package]
name = "git-streaks"
version = "0.1.0"
description = "GitHub contribution heatmap and streak tracker"
authors = ["Git Streaks"]
edition = "2021"

[lib]
name = "git_streaks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
regex = "1"
once_cell = "1"
tauri-plugin-autostart = "2.5.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
